# scwx_theme_editor

./: ACKNOWLEDGMENTS.md  CMakeLists.txt  COPYING  README  README.md
.github/workflows/: windows.yml
src/: CMakeLists.txt  mainwindow.cpp  qt6ct.h
src/main/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/qt6ct-common/: CMakeLists.txt
